Add illegal access note